adicao do (z-index: 1000;) e header fixo novamente

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -24,7 +24,8 @@
         width: 100%;
         padding: 20px 0;
         border-bottom: 1px solid #c44fe7;
-        /*position: fixed*/
+        position: fixed;
+        z-index: 1000;
     }
     /*#750d94;*/
     
